--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>mypage</title>
+    <title>Minning Chen | Visual Design & Art Direction </title>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
     <link rel="stylesheet" type="text/css" href="./css/cstyle0.css" />
@@ -16,8 +16,8 @@
     <div class="index_page" id="index_page">
         <div class="header">
             <div class="info">
-                <div class="name">NAME name</div>
-                <div class="email">Email xxxxxx@xxx.com</div>
+                <div class="name">CHEN Minning</div>
+                <div class="email">Email xxxxxx@minnch.com</div>
             </div>
             <div class="data">
                 <div class="work">Work Updated</div>
@@ -57,7 +57,7 @@
                         <div class="bd" id="bd">
 
                             <span class="">
-                                <div class="item1"><br>A passionate<h5> Visual Designer / UI & UE / Art Director </h5> with a wide range skills and experiences to helping clients communicate and solve problems through
+                                <div class="item1"><br>A passionate <h5> Visual Designer / UI & UE / Art Director </h5> with a wide range skills and experiences to helping clients communicate and solve problems through
                             creative visual solutions and starting from the concept up tp final results.
                         </div>
                         </span>
@@ -98,13 +98,16 @@
         </div>
         <div class="left_bar" id="left_bar">
             <P>WORKS</P>
-            <span class="active">Packing</span>
-            <span>UI, UE & App</span>
-            <span>UE & Web</span>
-            <span>Motion Graphic</span>
-            <span>Characters & Animation</span>
-            <span>Banner/Billboard/Poster</span>
-            <span>Exhibition</span>
+            <span class="active">Child Gain Chews </span>
+            <span>The Tribute to Classic </span>
+            <span>Space Snacks </span>
+            <span>CIIE 2019 Exhibition </span>
+            <span>Jiayou Logisitic Website </span>
+            <span>Baidu Antivirus Web Game </span>
+            <span>Boumi Monitor App </span>
+            <span>Logofolio </span>
+            <span>Offisky Business Phone System </span>
+            <span>Posters I ~ IV </span>
         </div>
     </div>
 
