--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="header">
             <div class="info">
                 <div class="name">CHEN Minning</div>
-                <div class="email">Email xxxxxx@minnch.com</div>
+                <div class="email">Email mch@minnch.com</div>
             </div>
             <div class="data">
                 <div class="work">Work Updated</div>
@@ -65,7 +65,7 @@
                             <span>
 
                         <div class="item2">
-                             <h4>Previously with</h4>
+                            <div><h5>Previously with </h5></div>
                             <div><p>Freelancer</p> <p> Y2011- present</p></div>
                             <div><p>Vancouver Freeze Dry Ltd.</p> <p>Y2019-Y2020</p></div>
                             <div><p>Babysoft Corporation</p> <p> Y2015-Y2018</p></div>
