--- a/index.html
+++ b/index.html
@@ -112,16 +112,16 @@
     </div>
 
     <div class="content" id="content">
-        <div class="active" id="ccontent"><iframe id="iframe_weaper" src="./template/cpage1.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
-        <div><iframe src="./template/cpage1.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
-        <div> <iframe src="./template/cpage1.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
-        <div> <iframe src="./template/cpage1.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
-        <div> <iframe src="./template/cpage1.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
-        <div> <iframe src="./template/cpage1.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
-        <div> <iframe src="./template/cpage1.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
-        <div> <iframe src="./template/cpage1.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
-        <div> <iframe src="./template/cpage1.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
-        <div> <iframe src="./template/cpage1.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
+        <div class="active" id="ccontent"><iframe id="iframe_weaper" src="./template/ChildGainChews.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
+        <div><iframe src="./template/TheTributetoClassic.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
+        <div> <iframe src="./template/ChildGainChews.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
+        <div> <iframe src="./template/CiiE2019Shanghai.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
+        <div> <iframe src="./template/ChildGainChews.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
+        <div> <iframe src="./template/ChildGainChews.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
+        <div> <iframe src="./template/ChildGainChews.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
+        <div> <iframe src="./template/ChildGainChews.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
+        <div> <iframe src="./template/ChildGainChews.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
+        <div> <iframe src="./template/ChildGainChews.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
     </div>
 
 
