--- a/index.html
+++ b/index.html
@@ -102,8 +102,9 @@
             <span>The Tribute to Classic </span>
             <span>Space Snacks </span>
             <span>CIIE 2019 Exhibition </span>
-            <span>Jiayou Logisitic Website </span>
-            <span>Baidu Antivirus Web Game </span>
+            <span>Jiayou Logistics Website </span>
+            <span>Baidu Antivirus Website </span>
+            <span>Sina Auto App Page </span>
             <span>Boumi Monitor App </span>
             <span>Logofolio </span>
             <span>Offisky Business Phone System </span>
@@ -114,14 +115,15 @@
     <div class="content" id="content">
         <div class="active" id="ccontent"><iframe id="iframe_weaper" src="./template/ChildGainChews.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
         <div><iframe src="./template/TheTributetoClassic.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
-        <div> <iframe src="./template/ChildGainChews.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
+        <div> <iframe src="./template/SpaceSnack.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
         <div> <iframe src="./template/CiiE2019Shanghai.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
-        <div> <iframe src="./template/ChildGainChews.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
-        <div> <iframe src="./template/ChildGainChews.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
-        <div> <iframe src="./template/ChildGainChews.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
-        <div> <iframe src="./template/ChildGainChews.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
-        <div> <iframe src="./template/ChildGainChews.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
-        <div> <iframe src="./template/ChildGainChews.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
+        <div> <iframe src="./template/JiayouLogisticWebsite.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
+        <div> <iframe src="./template/BaiduAntivirusWebsite.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
+        <div> <iframe src="./template/SinaAutoAppPage.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
+        <div> <iframe src="./template/BoumiMonitorApp.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
+        <div> <iframe src="./template/Logofolio.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
+        <div> <iframe src="./template/OffiskyBusinessPhoneSystem.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
+        <div> <iframe src="./template/Posters.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
     </div>
 
 
