--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Minning Chen | Visual Design & Art Direction </title>
+    <title>Minning Chen | Visual Design & UI/UE & Art Direction </title>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
     <link rel="stylesheet" href="./css/index.css">
+    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
     <script src="./js/index.min.js"></script>
 </head>
 
@@ -56,10 +57,8 @@
                         <div class="bd" id="bd">
 
                             <span class="">
-                                <div class="item1"><br>A passionate <h5> Visual Designer / UI & UE / Art Director </h5> with a wide range skills and experiences to helping clients communicate and solve problems through
-                            creative visual solutions and starting from the concept up tp final results.
-                        </div>
-                        </span>
+                                <div class="item1"><br>A passionate <h5> Visual Designer / UI & UE / Art Director </h5> with a wide range of skills and experience to help clients communicate and solve problems through creative visual solutions and start from the concept up to final results.
+                                </div></span>
 
                             <span>
 
@@ -78,7 +77,12 @@
                                 <div>Pycharm, SublimeText 2, Github;
                                     <br> Sketch, Axure & OmniGraﬄe; etc.</div>
                                 <img src="./static/3.png" alt=""></div></span>
-                            <span><div class="item4"> WX - TEL - ZCOOL </div></span>
+                            <span>
+                                <div class="item4">
+                                <span>For any inquires, please don’t hesitate to get in touch.</span>
+                                <div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="mia-chen-ba952393"><a class="LI-simple-link" href='https://ca.linkedin.com/in/mia-chen-ba952393?trk=profile-badge'>Mia Chen</a></div>
+                                </div>
+                            </span>
                         </div>
                     </div>
                     <script src="./js/main.js"></script>
@@ -112,18 +116,18 @@
     </div>
 
     <div class="content" id="content">
-        <div class="active" id="ccontent"  ><iframe id="iframe_weaper" src="./template/ChildGainChews.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
-        <div><iframe src="./template/TheTributetoClassic.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
-        <div> <iframe src="./template/SpaceSnack.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
-        <div> <iframe src="./template/CiiE2019Shanghai.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
-        <div> <iframe src="./template/JiayouLogisticsWebsite.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
+        <div class="active" id="ccontent"><iframe class="iframe_" id="iframe_weaper" src="./template/ChildGainChews.html" style="width: 100%; height: 44.5rem;" scrolling="yes" frameborder="0"></iframe></div>
+        <div><iframe class="iframe_" src="./template/TheTributetoClassic.html" style="width: 100%; height: 22.55rem;" scrolling="yes" frameborder="0"></iframe></div>
+        <div> <iframe class="iframe_" src="./template/SpaceSnack.html" style="width: 100%; height: 28rem;" scrolling="yes" frameborder="0"></iframe></div>
+        <div> <iframe class="iframe_" src="./template/CiiE2019Shanghai.html" style="width: 100%; height: 28.5rem;" scrolling="yes" frameborder="0"></iframe></div>
+        <div> <iframe class="iframe_" src="./template/JiayouLogisticsWebsite.html" style="width: 100%; height: 22.68rem;" scrolling="yes" frameborder="0"></iframe></div>
         <!-- 二级页面高度------------------------ -->
-        <div style="height: 3522px;"> <iframe src="./template/BaiduAntivirusWebsite.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
-        <div style="height: 7000px;"> <iframe src="./template/SinaAutoAppPage.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
-        <div> <iframe src="./template/BoumiMonitorApp.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
-        <div> <iframe src="./template/Logofolio.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
-        <div> <iframe src="./template/OffiskyBusinessPhoneSystem.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
-        <div> <iframe src="./template/Posters.html" style="width: 100%; height: 100%;" scrolling="yes" frameborder="0"></iframe></div>
+        <div> <iframe class="iframe_" src="./template/BaiduAntivirusWebsite.html" style="width: 100%; height: 18.25rem;" scrolling="yes" frameborder="0"></iframe></div>
+        <div> <iframe class="iframe_" src="./template/SinaAutoAppPage.html" style="width: 100%; height: 14.25rem;" scrolling="yes" frameborder="0" class="iframe_"></iframe></div>
+        <div> <iframe class="iframe_" src="./template/BoumiMonitorApp.html" style="width: 100%; height: 16.5rem;" scrolling="yes" frameborder="0"></iframe></div>
+        <div> <iframe class="iframe_" src="./template/Logofolio.html" style="width: 100%; height: 15.25rem;" scrolling="yes" frameborder="0"></iframe></div>
+        <div> <iframe class="iframe_" src="./template/OffiskyBusinessPhoneSystem.html" style="width: 100%; height: 5rem;" scrolling="yes" frameborder="0"></iframe></div>
+        <div> <iframe class="iframe_" src="./template/Posters.html" style="width: 100%; height: 30rem" scrolling="yes" frameborder="0"></iframe></div>
     </div>
 
 
@@ -137,8 +141,8 @@
         var works = document.getElementById('works')
         var index_page = document.getElementById('index_page')
         var under = document.getElementById('under')
-            // var ccontent = document.getElementById('ccontent')
-            // var iframe_weaper = document.getElementById('iframe_weaper')
+        var iframe_weaper_arr = document.getElementsByClassName('iframe_')
+
 
         works.onclick = function() {
             index_page.style.display = "none"
@@ -159,7 +163,7 @@
 
         for (var i = 0; i < hspan.length; i++) {
             hspan[i].setAttribute("index", i);
-            hspan[i].onmouseover = function() {
+            hspan[i].onclick = function() {
                 for (var j = 0; j < hspan.length; j++) {
                     hspan[j].removeAttribute("class");
                 }
@@ -169,7 +173,12 @@
                     bspan[k].removeAttribute("class");
                 }
                 bspan[num].className = "active";
-
+                var height = iframe_weaper_arr[num].style.height
+                console.log(height);
+                iframe_weaper_arr[num].style.height = '50vh'
+                setTimeout(function() {
+                    iframe_weaper_arr[num].style.height = height
+                }, 500)
             };
         }
     </script>
