--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                              </span>
 
                             <span><div class="item3">
-                                <div>Pycharm, SublimeText 2, Github;
+                                <div>WordPress，Pycharm, SublimeText 2, Github;
                                     <br> Sketch, Axure & OmniGraﬄe; etc.</div>
                                 <img src="./static/3.png" alt=""></div></span>
                             <span>
